feat: integrate Ant Design UI library with professional layout and components

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "concepts",
     "education"
   ],
-  "author": "",
+  "author": {
+    "name": "Ramanjaneya",
+    "email": "karnati.anjan@gmail.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.2"
