--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,15 @@
     "start": "vite"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.26.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
+  },
+  "author": {
+    "name": "Ramanjaneya",
+    "email": "karnati.anjan@gmail.com"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -20,4 +26,4 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
-} 
+}
