--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,24 @@
   "scripts": {
     "start": "ts-node-dev index.ts",
     "build": "tsc",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "seed": "ts-node scripts/seedDatabase.ts",
+    "test:db": "ts-node scripts/testConnection.ts",
+    "setup:atlas": "ts-node scripts/setupAtlas.ts"
   },
   "author": {
     "name": "Ramanjaneya",
     "email": "karnati.anjan@gmail.com"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.17.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
-    "@types/express": "^4.17.13"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
