--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,28 @@
     "dev": "ts-node-dev index.ts",
     "seed": "ts-node scripts/seedDatabase.ts",
     "test:db": "ts-node scripts/testConnection.ts",
-    "setup:atlas": "ts-node scripts/setupAtlas.ts"
+    "setup:atlas": "ts-node scripts/setupAtlas.ts",
+    "create:admin": "ts-node scripts/createAdmin.ts"
   },
   "author": {
     "name": "Ramanjaneya",
     "email": "karnati.anjan@gmail.com"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^18.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
