feat: implement comprehensive security measures for admin authentication

--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/prismjs": "^1.26.5",
     "antd": "^5.26.7",
+    "crypto-js": "^4.2.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
