--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "email": "karnati.anjan@gmail.com"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
