Fix Vercel deployment routing for client-side navigation and static assets

--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,12 @@
       "dest": "/server/index.ts"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/client/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/client/$1"
+      "dest": "/client/index.html"
     }
   ],
   "env": {
